# Projet-ECE-Cooked

./: CMakeLists.txt  Header.h  README.md  ajout_aliments.c  ajout_assiettes.c  ajout_commande.c  chargement_commande.c  chargement_images.c  chargement_map.c  chargement_menu.c  chargement_objets.c  chargement_perso1.c  choix_du_niveau.c  choix_pseudo.c  choix_skin.c  colisions_map.c  colisions_objets.c  colisions_perso.c  dessine_commande.c  dessine_objet.c  dessine_perso.c  estVide.c  initialisation.c  initialisation_file.c  initialisation_niveau.c  initialisation_perso.c  initialise_menu.c  jeu.c  main.c  menu_1.c  mesurer_temps.c  mouvement_perso.c  nombre_aleatoire.c  options.c  prendre_objet.c  sortie_cuisine.c  supprimer_assiette.c  supprimer_objet.c  suprimer_commande.c  update_actions.c  (+9 more)
europe/: map.pdn
groenland/: map.pdn
zone 51/: map.pdn
